# MCconnectRust

./: .gitignore  Cargo.toml  build.rs  build_log.txt  build_log_2.txt  package-lock.json  tauri.conf.json
.github/workflows/: build.yml
icons/: icon.icns
src/: app.rs  callbacks.rs  client_mode.rs  commands.rs  config.rs  host.rs  lan_discovery.rs  main.rs  metrics.rs  minecraft_discovery.rs  send_queue.rs  util.rs  vpn.rs
ui/: build_log.txt  index.html  package-lock.json  package.json
ui/src/: App.tsx  index.css
ui/src/components/: Button.tsx  Card.tsx  LogConsole.tsx  LogPanel.tsx  PerformancePanel.tsx  TitleBar.tsx
ui/src/views/: Client.tsx  Home.tsx  Host.tsx
