[package]
name = "MCconnectRust"
version = "0.1.0"
edition = "2024"

[dependencies]
steamworks = { git = "https://github.com/Noxime/steamworks-rs" }
tun = { version = "0.6", features = ["async"] }
tokio = { version = "1", features = ["full"] }
packet = "0.1"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ipnetwork = "0.20"