[package]
name = "MCconnectRust"
version = "0.1.0"
edition = "2021"

[dependencies]
steamworks = { git = "https://github.com/Noxime/steamworks-rs" }
log = "0.4"
env_logger = "0.11"
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.dev]
incremental = true

[profile.release]
strip = true
lto = true
codegen-units = 1
